Fix code block horizontal scrolling problems.

--- a/css/style.css
+++ b/css/style.css
@@ -246,6 +246,7 @@ code
 	padding: 0em 0.25em;
 	box-sizing: border-box;
 	line-height: 1.5em;
+	overflow-x: scroll;
 }
 
 pre code
